[gd_scene load_steps=5 format=3 uid="uid://b6ni4splladpr"]

[ext_resource type="Script" uid="uid://c27jjqfca5pes" path="res://normal_peg.gd" id="1_5d32t"]
[ext_resource type="Texture2D" uid="uid://k2oyqqvuo3lg" path="res://icon.svg" id="2_xfwl5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5d32t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mk58r"]

[node name="normal_peg" type="Node2D"]
scale = Vector2(2, 1)
script = ExtResource("1_5d32t")

[node name="normal" type="Sprite2D" parent="."]
position = Vector2(0.25, 0.500001)
scale = Vector2(0.160156, 0.164063)
texture = ExtResource("2_xfwl5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.99, 0.99)
shape = SubResource("RectangleShape2D_5d32t")

[node name="Timer" type="Timer" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_mk58r")

[node name="winning" type="Sprite2D" parent="."]
position = Vector2(-9.53674e-07, 0.500001)
scale = Vector2(0.15625, 0.164063)
texture = ExtResource("2_xfwl5")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="hidden" from="winning" to="." method="_on_winning_hidden"]
